LPS-120948 Fix navbars overlap in the form view and table view when publications is enabled

--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_form_view.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_form_view.scss
@@ -185,6 +185,14 @@
 			}
 		}
 	}
+
+	.multi-panel-sidebar.publications-enabled {
+		top: 144px;
+
+		.taglib-empty-result-message {
+			margin-bottom: 24px;
+		}
+	}
 }
 
 .field-type-drag-preview .custom-object-field {
