--- a/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_upper_toolbar.scss
+++ b/modules/apps/app-builder/app-builder-web/src/main/resources/META-INF/resources/css/_upper_toolbar.scss
@@ -22,3 +22,9 @@
 		padding: 0 16px;
 	}
 }
+
+.publications-enabled {
+	.app-builder-upper-toolbar {
+		top: 80px;
+	}
+}
